tests/baselines/reference/for-of47.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of47.ts(4,13): error TS2322: Type 'boolean' is not assignable to type 'number'.


==== tests/cases/conformance/es6/for-ofStatements/for-of47.ts (1 errors) ====
    var x: string, y: number;
    var array = [{ x: "", y: true }]
    enum E { x }
    for ({x, y: y = E.x} of array) {
                ~
!!! error TS2322: Type 'boolean' is not assignable to type 'number'.
        x;
        y;
    }